# stationsimcpp

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake.yml
cmake/: CompilerWarnings.cmake  ProjectDependences.cmake  ProjectDependencies.cmake  StandardProjectSettings.cmake
doc/: INSTALL.md
docs/: DEVELOPING.md  EXAMPLES.md
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp  multiple_models_run.cpp  multiple_models_run_mpi.cpp  particle_filter_run.cpp  single_model_run.cpp
examples/optimisation_1/: CMakeLists.txt  optimisation_1_run.cpp
examples/stationsim_model/: CMakeLists.txt  multiple_models_run.cpp  multiple_models_run_mpi.cpp  particle_filter_run.cpp  single_model_run.cpp
include/: Agent.hpp  HelpFunctions.hpp  Model.hpp  ModelParameters.hpp  ModelPlotting.hpp  MultipleModelsRun.hpp  MultipleModelsRunMPI.hpp  ParticleFilter.hpp  ParticleFilterModelParameters.hpp  ParticleFilterParameters.hpp  Point2D.hpp  help_functions.hpp
include/model/: Agent.hpp  Model.hpp  ModelParameters.hpp  ModelPlotting.hpp  ModelState.hpp  ModelStatistics.hpp  MultipleModelsRun.hpp  MultipleModelsRunMPI.hpp  Point2D.hpp
include/particle_filter/: Particle.hpp  ParticleFilter.hpp  ParticleFilterDataFeed.hpp  ParticleFilterFileOutput.hpp  ParticleFilterModelParameters.hpp  ParticleFilterParameters.hpp  ParticleFilterStatistics.hpp  ParticleFit.hpp  ParticleState.hpp  ParticlesInitialiser.hpp
particle_filter/: CMakeLists.txt
particle_filter/include/: Particle.hpp  ParticleFilter.hpp  ParticleFilterDataFeed.hpp  ParticleFilterFileOutput.hpp  ParticleFilterStatistics.hpp  ParticleFit.hpp  ParticleState.hpp  ParticlesInitialiser.hpp
source/: Agent.cpp  CMakeLists.txt  HelpFunctions.cpp  Model.cpp  ModelParameters.cpp  ModelPlotting.cpp  MultipleModelsRun.cpp  MultipleModelsRunMPI.cpp  ParticleFilter.cpp  ParticleFilterModelParameters.cpp  ParticleFilterParameters.cpp  Point2D.cpp
source/model/: Agent.cpp  Model.cpp  ModelParameters.cpp  ModelPlotting.cpp  MultipleModelsRun.cpp  MultipleModelsRunMPI.cpp  Point2D.cpp
source/particle_filter/: ParticleFilter.cpp  ParticleFilterDataFeed.cpp  ParticleFilterModelParameters.cpp  ParticleFilterParameters.cpp
sphere_function/: CMakeLists.txt
sphere_function/include/: SphereFunction.hpp  SphereFunctionState.hpp  SphereFunctionStatistics.hpp
sphere_function/source/: SphereFunction.cpp
stationsim_model/: CMakeLists.txt
stationsim_model/include/: Agent.hpp  Gate.hpp  HelpFunctions.hpp  Model.hpp  ModelParameters.hpp  ModelPlotting.hpp  ModelState.hpp  ModelStatistics.hpp  MultipleModelsRun.hpp  MultipleModelsRunMPI.hpp  Point2D.hpp
stationsim_model/source/: Agent.cpp  Gate.cpp  Model.cpp  ModelParameters.cpp  ModelPlotting.cpp  MultipleModelsRun.cpp  MultipleModelsRunMPI.cpp  Point2D.cpp
tests/: CMakeLists.txt  test_model_parameters.cpp
tests/integration/: CMakeLists.txt
tests/integration/particle_filter_test_1/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_agent.cpp  test_help_functions.cpp  test_model.cpp  test_point2d.cpp
tests/unit/particle_filter/: CMakeLists.txt  unit_test_particle_filter.cpp
